[package]
name = "fp"
version = "0.1.0"
edition = "2021"
author = "Jean-Benoit Griesner"

[dependencies]
termion = "1.5"
signal-hook = "0.3"
clap = { version = "4.5.8", features = ["derive"] }
thiserror = "1.0.61"
inquire = "0.7.5"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/main.rs"
name = "fp"
